# prism

./: .cta.json  .dockerignore  .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  Cargo.toml  DESIGN.md  Dockerfile  Dockerfile.frontend  Dockerfile.go  README.md  config.example.json  docker-compose.yml  docker-entrypoint.sh  go.mod  go.sum  package.json  pnpm-lock.yaml  prism.example.json  prism.example.toml  prism.example.yaml  prism.json  prism.schema.json  tsconfig.json  vite.config.ts
.github/workflows/: build-release.yml  docs-cloudflare-pages.yml
cmd/prism/: main.go
crates/prism/: Cargo.toml
crates/prism/src/: main.rs  probestack.rs
crates/prism/src/prism/: admin.rs  app.rs  config.rs  logging.rs  managed.rs  middleware.rs  mod.rs  net.rs  protocol.rs  proxy.rs  router.rs  runtime_paths.rs  telemetry.rs
crates/prism/src/prism/tunnel/: autolisten.rs  client.rs  datagram.rs  manager.rs  mod.rs  protocol.rs  server.rs  transport.rs
crates/prism/src/prism/tunnel/transport/: quic.rs  tcp.rs  udp.rs
deploy/prism/: prism.toml
deploy/quickwit/indexes/: prism-logs.yaml  prism-otel-logs.yaml  prism-otel-traces.yaml
deploy/vector/: vector.yaml
deploy/victoriametrics/: promscrape.yml
internal/app/: prisms.go  tunnel_service_autolisten.go  tunnel_service_autolisten_test.go
internal/config/: config.go  config_logging_test.go  discovery.go  discovery_test.go  json_disabled_test.go  listeners_test.go  manager.go  manager_test.go  path.go  path_test.go  route_only_test.go  schema_test.go  tunnel_client_config_test.go  tunnel_endpoints_alias_test.go
internal/logging/: linestore.go  linestore_test.go  runtime.go
internal/protocol/: handshake.go  handshake_test.go  hostparser.go  minecraft_host_parser.go  tls_sni_host_parser.go  tls_sni_host_parser_test.go  wasm_builtin_parsers.go  wasm_builtin_parsers_test.go  wasm_host_parser.go
internal/protocol/wasm/: minecraft_handshake.wasm  minecraft_handshake.wat  tls_sni.wasm  tls_sni.wat
internal/proxy/: bridge.go  bufferpool.go  dialer.go  forward.go  mc_packets.go  proxyproto.go  proxyproto_test.go  session.go  session_integration_test.go  sessions.go  status_cache.go  tunnel_dialer.go  udp_forwarder.go  udp_forwarder_integration_test.go
internal/router/: router.go  router_test.go
internal/server/: server.go  udp_server.go
internal/telemetry/: admin.go  admin_logs_test.go  metrics.go
internal/tunnel/: bridge.go  client.go  datagram_conn.go  manager.go  manager_conflict_test.go  protocol.go  protocol_test.go  quic_options.go  server.go  tlsutil.go  transport.go  transport_factory.go  transport_kcp.go  transport_quic.go  transport_tcp.go  tunnel_integration_test.go
middlewares/: host_to_upstream.wat  minecraft_handshake.wat  tls_sni.wat
pkg/mcproto/: varint.go  varint_test.go
prism-docs/: README.md  docusaurus.config.ts  package.json
prism-docs/docs/: intro.md
prism-docs/docs/getting-started/: config-and-paths.md  quickstart.md
prism-docs/docs/guides/: docker.md  routing-parsers.md  routing.md  tunnel.md
prism-docs/docs/reference/: admin-api.md  configuration.md  env-cli.md
prism-docs/i18n/zh-CN/docusaurus-plugin-content-docs/current/: intro.md
prism-docs/i18n/zh-CN/docusaurus-plugin-content-docs/current/getting-started/: _category_.json  config-and-paths.md  quickstart.md
prism-docs/i18n/zh-CN/docusaurus-plugin-content-docs/current/guides/: _category_.json  docker.md  routing-parsers.md  routing.md  tunnel.md
prism-docs/i18n/zh-CN/docusaurus-plugin-content-docs/current/reference/: _category_.json  admin-api.md  configuration.md  env-cli.md
prism-docs/src/components/HomepageFeatures/: index.tsx
prism-docs/src/pages/: index.tsx
src/: main.rs  routeTree.gen.ts  styles.css
src/components/: Header.tsx  ManagedConfigEditor.tsx  ui.tsx
src/lib/: format.ts  managedConfig.test.ts  managedConfig.ts  managementApi.ts  panelConnection.test.ts  panelConnection.ts  panelSession.tsx  usePolling.ts
src/prism/: admin.rs  app.rs  config.rs  logging.rs  mod.rs  protocol.rs  proxy.rs  router.rs  telemetry.rs
src/routes/: __root.tsx  connections.tsx  index.tsx  login.tsx  nodes.$nodeId.tsx  nodes.index.tsx  nodes.tsx  runtime.tsx  tunnel-services.tsx
