[package]
name = "prism"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
arc-swap = "1.8"
axum = "0.7"
bytes = "1.11"
clap = { version = "4.5", features = ["derive", "env"] }
dashmap = "6.1"
directories = "6.0"
humantime = "2.3"
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "http-proto"] }
opentelemetry-semantic-conventions = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
rand = "0.9"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "net", "io-util", "time", "signal", "sync"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
wasmtime = "24.0"
