[package]
name = "prism"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
arc-swap = "1.8"
async-trait = "0.1"
axum = "0.8"
bytes = "1.11"
clap = { version = "4.5", features = ["derive", "env"] }
dashmap = "6.1"
directories = "6.0"
duckdb = { version = "1.10502.0", features = ["bundled"] }
futures-util = "0.3"
humantime = "2.3"
pin-project-lite = "0.2"
quinn = "0.11"
rand = "0.10"
rcgen = "0.14"
regex = "1.12"
rustls = "0.23"
rustls-pemfile = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
tokio = { version = "1.49", features = [
	"macros",
	"rt-multi-thread",
	"net",
	"io-util",
	"time",
	"signal",
	"sync",
] }
tokio_kcp = "0.9"
toml = "0.9"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
wasmer = { version = "7.0", default-features = false, features = ["singlepass", "wat"] }
tokio-yamux = "0.3"
rust-embed = "8"
mime_guess = "2"
