[package]
name = "prism"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
arc-swap = "1.9"
async-trait = "0.1"
axum = "0.8"
bytes = "1.12"
clap = { version = "4.6", features = ["derive", "env"] }
dashmap = "6.2"
directories = "6.0"
futures-util = "0.3"
humantime = "2.4"
pin-project-lite = "0.2"
quinn = "0.11"
rand = "0.10"
rcgen = "0.14"
regex = "1.13"
# Explicitly enable ring so the binary always has a usable rustls crypto backend.
# Quinn may also enable aws-lc-rs; main installs ring as the process default.
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
tokio = { version = "1.53", features = [
	"macros",
	"rt-multi-thread",
	"net",
	"io-util",
	"time",
	"signal",
	"sync",
] }
tokio_kcp = "0.9"
toml = "0.9"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
wasmer = { version = "7.2", default-features = false, features = ["singlepass", "wat"] }
tokio-yamux = "0.3"
rust-embed = "8"
mime_guess = "2"
